have plots working, just need to interpret them to turn in

--- a/hwk/hwk7/hwk7.Rmd
+++ b/hwk/hwk7/hwk7.Rmd
@@ -7,10 +7,12 @@ output: html_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = FALSE)
 library(ggplot2)
 set.seed(12345)
 ```
+
+# Linear Spline - Fix Knots, Vary Lambda
 
 ```{r}
 
@@ -65,10 +67,122 @@ for(num_knots in c(5, 10, 20, 30)){
 
 ```
 
+# Linear Spline - Fix Lambda, Vary Knots
+
+```{r}
+
+for(l in c(0, 10, 15, 20, 50, 1000)){
+  for(num_knots in c(5, 10, 20, 30)){
+    
+    # generate data
+    x <- runif(n = 1000, min = 0, max = 3*pi/2)
+    e <- rnorm(n = 1000, mean = 0, sd = 0.1)
+    y <- sin(x + 0.1) + e
+    df <- data.frame(x, e, y)
+    
+    # get knot locations
+    K <- num_knots
+    k <- 1:K
+    knots <- quantile(x, probs = (k+1)/(K+2))
+    
+    # make linear spline matrix
+    X <- cbind(1, x)
+    for(i in k){
+      X <- cbind(X, (x - knots[i]) * as.numeric(x > knots[i]))
+    }
+    
+    # make D
+    D <- diag(c(0, 0, rep(1, K)))
+    
+    # set smoothing parameter
+    lambda <- l
+    
+    # get beta hat
+    beta_hat <- solve(t(X) %*% X + lambda * D, t(X) %*% y)
+    
+    # get estimates
+    y_hat <- X %*% beta_hat
+    df$y_hat <- y_hat
+    
+    # plot
+    p <- ggplot(data = df) +
+      geom_point(mapping = aes(x = x, y = y), alpha = 0.3, show.legend = FALSE) +
+      geom_vline(xintercept = knots, alpha = 0.3) +
+      stat_function(mapping = aes(color = "Truth"), 
+                    fun = function(x) {sin(x + 0.1)}, lwd = 1) +
+      geom_line(mapping = aes(x = x, y = y_hat, color = "Fitted")) +
+      scale_color_manual(name = "Fitted", values = c("red", "blue")) +
+      ggtitle(paste0("Linear spline with ", K,
+                     " knots \nand smoothing parameter ", lambda))
+    
+    print(p)
+    
+  }
+}
+
+```
+
+# Quadratic Spline - Fix Knots, Vary Lambda
+
 ```{r}
 
 for(num_knots in c(5, 10, 20, 30)){
   for(l in c(0, 10, 15, 20, 50, 1000)){
+    
+    # generate data
+    x <- runif(n = 1000, min = 0, max = 3*pi/2)
+    e <- rnorm(n = 1000, mean = 0, sd = 0.1)
+    y <- sin(x + 0.1) + e
+    df <- data.frame(x, e, y)
+    
+    # get knot locations
+    K <- num_knots
+    k <- 1:K
+    knots <- quantile(x, probs = (k+1)/(K+2))
+    
+    # make linear spline matrix
+    X <- cbind(1, x)
+    for(i in k){
+      X <- cbind(X, (x - knots[i])^2 * as.numeric(x > knots[i]))
+    }
+    
+    # make D
+    D <- diag(c(0, 0, rep(1, K)))
+    
+    # set smoothing parameter
+    lambda <- l
+    
+    # get beta hat
+    beta_hat <- solve(t(X) %*% X + lambda * D, t(X) %*% y)
+    
+    # get estimates
+    y_hat <- X %*% beta_hat
+    df$y_hat <- y_hat
+    
+    # plot
+    p <- ggplot(data = df) +
+      geom_point(mapping = aes(x = x, y = y), alpha = 0.3, show.legend = FALSE) +
+      geom_vline(xintercept = knots, alpha = 0.3) +
+      stat_function(mapping = aes(color = "Truth"), 
+                    fun = function(x) {sin(x + 0.1)}, lwd = 1) +
+      geom_line(mapping = aes(x = x, y = y_hat, color = "Fitted")) +
+      scale_color_manual(name = "Fitted", values = c("red", "blue")) +
+      ggtitle(paste0("Quadratic spline with ", K,
+                     " knots \nand smoothing parameter ", lambda))
+    
+    print(p)
+    
+  }
+}
+
+```
+
+# Quadratic Spline - Fix Lambda, Vary Knots
+
+```{r}
+
+for(l in c(0, 10, 15, 20, 50, 1000)){
+  for(num_knots in c(5, 10, 20, 30)){
     
     # generate data
     x <- runif(n = 1000, min = 0, max = 3*pi/2)
